--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,12 @@
     border-radius: 0 3px 3px 0;
   }
 
+  .list-unstyled li span {
+    margin-right: 10px;
+    font-size: 1.2em;
+    color: #000;
+  }
+
   .flex-auto {
     -ms-flex: 0 0 auto;
     -webkit-box-flex: 0;
