--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,6 +27,10 @@
   color: #000;
 }
 
+.social-icons a:hover i {
+  transform: scale(1.2);
+}
+
 #dark_mode_icon{
     width: 25px;
     cursor: pointer;
