--- a/src/expressjs/pages/home/index.css
+++ b/src/expressjs/pages/home/index.css
@@ -1,3 +1,7 @@
+.text-primary {
+  color: #007bff !important; /* Blue color */
+  font-weight: bold;
+}
 
 .social-icons {
   display: flex;
@@ -17,7 +21,7 @@
 }
 
 .nav a:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 
