--- a/src/expressjs/pages/home/index.css
+++ b/src/expressjs/pages/home/index.css
@@ -1,3 +1,12 @@
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
 .text-primary {
   color: #007bff !important; /* Blue color */
   font-weight: bold;
