create column for smaller screens

--- a/src/expressjs/pages/home/index.css
+++ b/src/expressjs/pages/home/index.css
@@ -1,3 +1,9 @@
+@media (max-width: 640px) {
+  .flex {
+    flex-direction: column;
+  }
+}
+
 
 .material-symbols-outlined {
   font-variation-settings:
