--- a/src/expressjs/pages/home/output.css
+++ b/src/expressjs/pages/home/output.css
@@ -62,7 +62,7 @@
     color: #000;
   }
 
-h1, h2, h3, h4, h5, h6, a {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Playfair Display', serif;
   }
 .nav-scroller {
