add icons to projects showcase on index.html, add svgs to svg folders

--- a/src/expressjs/pages/home/output.css
+++ b/src/expressjs/pages/home/output.css
@@ -52,6 +52,9 @@
     transform: scale(1.05);
   }
 
+  .img hover {
+    transform: scale(1.05);
+  }
 
   .social-icons a:hover img {
     transform: scale(1.05);
