--- a/src/expressjs/pages/home/output.css
+++ b/src/expressjs/pages/home/output.css
@@ -7,22 +7,21 @@
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
 
-@media (max-width: 640px) {
-  .social-icons {
-    display: none;
-  }
-}
-
-@media (max-width: 640px) {
-  .blog-header-logo {
-    font-size: 1.5rem;
-  }
-  .flex:nth-child(2) {
-    width: 40%;
-  }
+@keyframes wipe-enter {
+	0% {
+		transform: scale(0, .025);
+	}
+	50% {
+		transform: scale(1, .025);
+	}
 }
 
 
+@media (prefers-reduced-motion: no-preference) {
+  .square-animation {
+    animation: wipe-enter 1s 1;
+  }
+}
 *,
 ::before,
 ::after {
