add scroll animation css and js

--- a/src/expressjs/pages/home/output.css
+++ b/src/expressjs/pages/home/output.css
@@ -7,21 +7,35 @@
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
 
-@keyframes wipe-enter {
-	0% {
-		transform: scale(0, .025);
-	}
-	50% {
-		transform: scale(1, .025);
-	}
+.reveal {
+  position: relative;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal.active {
+  transform: translateY(0px);
+  filter: blur(0);
+  opacity: 1;
+}
+
+.reveal:nth-child() {
+  transition-delay: 200ms;
+}
+
+.reveal:nth-child() {
+  transition-delay: 400ms;
+
+}
+
+.reveal:nth-child() {
+  transition-delay: 600ms;
+
 }
 
 
-@media (prefers-reduced-motion: no-preference) {
-  .square-animation {
-    animation: wipe-enter 1s 1;
-  }
-}
 *,
 ::before,
 ::after {
