--- a/src/expressjs/pages/home/output.css
+++ b/src/expressjs/pages/home/output.css
@@ -6,9 +6,12 @@
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
+.glow-on-hover {
+  transition: 0.3s ease;
+}
 
-#tech {
-  margin-right: 100px;
+.glow-on-hover:hover {
+  filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.8));
 }
 
 .reveal {
